Bug 1217275 -  Fix missing \n in IMMHandler::HandleDocumentFeed(), it was replaced to empty string accidentally. r=m_kato, a=sylvestre